--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ description = "A platform-agnostic driver for Semtech SX1276/77/78/79 based boar
 embedded-hal = "1.0.0"
 bit_field = "0.10.3"
 
+[dev-dependencies]
+embedded-hal-mock = { version = "0.11.1", features = ["eh1"] }
+
 [features]
 version_0x09 = []
 default = []
